update readme + fix smol style issue + hide scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,7 @@ input[type="submit"]:hover {
 .toolbar button {
     margin: 0 5px;
 }
+
+*::-webkit-scrollbar {
+    width: 0;
+}
